# IME_TIP

./: .clang-format  CMakeLists.txt  CMakeSettings.json  README.md  resource.aps  resource.h  resource.rc
assets/html/: index.html
config/: config.json
src/: main.cpp
src/config_manager/: config_manager.cpp  config_manager.h
src/cursor_tracker/: cursor_tracker.cpp  cursor_tracker.h
src/input_method/: input_method.cpp  input_method.h
src/input_method_detector/: input_method_detector.cpp  input_method_detector.h
src/marker_renderer/: marker_renderer.cpp  marker_renderer.h
src/overlay_window/: overlay_window.cpp  overlay_window.h
src/setting_viewer/: setting_viewer.cpp  setting_viewer.h
src/utils/: utils.h
src/window_manager/: window_manager.cpp  window_manager.h
